--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="QR CODE">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="author" content="JamesCosta">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,8 +27,7 @@
   </div>
 
   <main>
-    <div class="div-main">
-        <div class="div-principal">
+        <section>
             <figure>
               <img src="assets/img/image-qr-code.png" alt="QR CODE">
             </figure>
@@ -35,7 +35,7 @@
               <h1>Improve your front-end skills by building projects</h1>
               <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
             </article>
-        </div>
+        </section>
   </main>
 
   
