--- a/index.html
+++ b/index.html
@@ -16,16 +16,6 @@
 
 </head>
 <body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/DropperDEV" target="_blank">James Costa</a>.
-  </div>
-
   <main>
         <section>
             <figure>
@@ -37,7 +27,10 @@
             </article>
         </section>
   </main>
-
   
+  <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/DropperDEV" target="_blank">James Costa</a>.
+  </footer>
 </body>
 </html>
